# rasterization

./: CMakeLists.txt  GraphicalAspects.sln  q
GraphicalAspects/: GraphicalAspects.vcxproj  GraphicalAspects.vcxproj.filters  f.tga  main.cpp  utils.h
GraphicalAspects/Buffer/: Buffer.cpp  Buffer.h  ITgaSavable.h  TgaBuffer.cpp  TgaBuffer.h
GraphicalAspects/Data/: Triangle.cpp  Triangle.h  math_structs.cpp  math_structs.h
GraphicalAspects/Debug/: main.obj.enc  vc141.idb  vertexprocessor.obj.enc
GraphicalAspects/Debug/GraphicalAspects.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GraphicalAspects.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
GraphicalAspects/Light/: light.cpp  light.h
GraphicalAspects/Mesh/: CubeMesh.cpp  CubeMesh.h  TriangleMesh.cpp  TriangleMesh.h  cone_mesh.cpp  cone_mesh.h  cylinder_mesh.cpp  cylinder_mesh.h  mesh.cpp  mesh.h  vertex.h
GraphicalAspects/Parser/: file_utils.cpp  file_utils.h  objParser.cpp  objParser.h  slowObjParser.cpp  slowObjParser.h
GraphicalAspects/Rasterizer/: Rasterizer.cpp  Rasterizer.h
GraphicalAspects/Tests/: main_tests.h  tests.cpp  tests.h
GraphicalAspects/Texture/: texture.cpp  texture.h
GraphicalAspects/Timer/: timer.cpp  timer.h
GraphicalAspects/VertexProcessor/: VertexProcessor.cpp  VertexProcessor.h
include/SDL2/: sdl2-config.cmake
